# asgi-beyond-http

./: .gitignore  .pdm-python  README.md  pyproject.toml
application/: __init__.py  data.py  main.py  telematica.py  web.py
emulator/: generate_pkt.py
framework/: __init__.py  byte_reader.py  main.py  utils.py
protocol_server/: __init__.py  __main__.py  server.py
teltonika/: __init__.py  packets.py  protocol.py
tests/emulator/: run.py
